...
  <string name="generic_no"
    translation_description="The text on a button to say no.">
    No
  </string>
  <string name="generic_ok"
    translation_description="The text on a button to say ok.">
    OK
  </string>
  <string name="generic_paused"
    translation_description="Text indicating a track is paused.">
    Paused
  </string>
  <string name="generic_progress_title"
...
    Aggregated stats
  </string>
  <string name="menu_delete"
    translation_description="In the menu, to delete a track or a marker.

      Character limit: ~20 (1 line)">
    Delete
  </string>
  <string name="menu_delete_all"
    translation_description="In the menu, to delete all the tracks.

      Character limit: ~20 (1 line)">
    Delete all
...
  </string>

  <!-- Track List -->
  <string name="track_list_empty_message"
    translation_description="When the track list is empty, the message informing the user to click
      on the record button to start a new recording">
    Start recording your next adventure here
  </string>
  <string name="track_list_record_error"
    translation_description="When starting a new track recording, the error message informing the
      user not able to record and asking the user to try again.">
    Unable to start recording. No GPS signal. Try again.
  </string>
...
