<?xml version="1.0" encoding="utf-8"?><!--
Copyright 2010 Google Inc.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

     http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
-->
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <com.google.android.material.search.SearchBar
            android:id="@+id/track_list_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_behavior="@string/searchbar_scrolling_view_behavior"
            app:menu="@menu/track_list"
            app:navigationIcon="@drawable/ic_logo_color_24dp" />
    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.search.SearchView
        android:id="@+id/track_list_search_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hint="@string/menu_search"
        app:layout_anchor="@id/track_list_toolbar">
        <!-- Search suggestions/results go here (ScrollView, RecyclerView, etc.). -->
    </com.google.android.material.search.SearchView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/track_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="?attr/actionBarSize"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bottom_app_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_gravity="bottom"
        app:fabAlignmentMode="end"
        app:fabAnchorMode="cradle">

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.Material3.Button.IconButton"
            android:id="@+id/aggregated_stats_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/ic_statistics_24dp"
            app:iconTint="?attr/colorOnBackground" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/sensor_start_button"
            style="@style/Widget.Material3.Button.IconButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/ic_gps_off_24dp"
            app:iconTint="?attr/colorOnBackground" />

    </com.google.android.material.bottomappbar.BottomAppBar>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/track_list_fab_action"
        android:tint="@android:color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/image_record"
        android:src="@drawable/ic_baseline_record_24"
        app:layout_anchor="@id/bottom_app_bar" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>