...
        app:fabAlignmentMode="end"
        app:fabAnchorMode="cradle"
        app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
        app:menu="@menu/track_record" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/track_recording_fab_action"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_record_24"
        android:contentDescription="@string/image_stop"
        app:layout_anchor="@id/bottom_app_bar" />

...
