...
    android:layout_height="wrap_content"
    android:background="@drawable/controller_background"
    android:paddingTop="8dp"
    android:paddingBottom="8dp">

    <ImageButton
        android:id="@+id/controller_record"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="10"
        android:background="@android:color/transparent"
        android:contentDescription="@string/image_record"
        android:src="@drawable/ic_button_record" />
...
            android:gravity="center"
            android:singleLine="true"
            tools:text="@string/generic_recording" />
    </RelativeLayout>

    <ImageButton
        android:id="@+id/controller_stop"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="10"
        android:background="@android:color/transparent"
        android:contentDescription="@string/image_stop"
        android:src="@drawable/button_stop" />
...
