<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/filter_items"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:orientation="vertical"
            app:singleSelection="false" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/filter_date_from"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/generic_from"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:padding="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/filter_date_edit_text_from"
                android:drawableStart="@drawable/ic_baseline_date_range_24"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="true"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:inputType="date"
                android:selectAllOnFocus="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/filter_date_to"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/generic_to"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:padding="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/filter_date_edit_text_to"
                android:drawableStart="@drawable/ic_baseline_date_range_24"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="true"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:inputType="date"
                android:selectAllOnFocus="true" />

        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
</ScrollView>