<?xml version="1.0" encoding="utf-8"?>

<com.google.android.material.button.MaterialButton xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/filter_dialog_check_button"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    style="@style/Widget.Material3.Button.OutlinedButton"
    android:checkable="true"
    android:gravity="center"
    tools:text="Check Button" />