<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/exit"
        android:icon="@drawable/ic_exit"
        app:showAsAction="always"
        android:title="@string/exit" />

    <item
        android:id="@+id/aggregated_statistics_clear_filter"
        android:icon="@drawable/ic_clear_filter_24dp"
        app:showAsAction="always"
        android:title="@string/menu_filter" />
    <item
        android:id="@+id/aggregated_statistics_filter"
        android:icon="@drawable/ic_baseline_filter_alt_24"
        app:showAsAction="always"
        android:title="@string/menu_filter" />


</menu>
